--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,9 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+
+    --header-height: 3.75rem;
+    --header-height: 5rem;
   }
 
   .dark {
