--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,14 @@
   .text-balance {
     text-wrap: balance;
   }
+
+  .section-padding {
+    @apply py-10 lg:py-16;
+  }
+
+  .heading-two {
+    @apply text-pretty text-3xl font-bold leading-tight lg:text-5xl;
+  }
 }
 
 @layer base {
@@ -36,7 +44,7 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
 
-    --header-height: 3.75rem;
+    --header-height-sm: 3.75rem;
     --header-height: 5rem;
   }
 
@@ -74,5 +82,15 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer components {
+  .heading-two h2 {
+    @apply text-pretty text-3xl font-bold leading-tight lg:text-5xl;
+  }
+
+  .heading-two p {
+    @apply mt-4 text-pretty text-xs font-normal text-muted-foreground lg:mt-6 lg:text-base;
   }
 }
